--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,9 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.1'
     }
 }
 apply plugin: 'com.android.library'
@@ -13,22 +12,23 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group = 'com.tehnicomsolutions'
-version = '2.0.2'
+version = '2.0.5'
 
 repositories {
     jcenter()
     mavenCentral()
     mavenLocal()
     flatDir { dirs 'aars' }
+    maven { url 'http://maven.android-forever.com/' }
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 24
     }
 
     packagingOptions {
@@ -113,7 +113,7 @@ uploadArchives {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     archives "org.apache.maven.wagon:wagon-ssh:2.2"
-    compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
+    compile 'org.skynetsoftware:supertoasts:2.0.0'
 
     compile project (':ts-http-shared')
 
@@ -122,6 +122,6 @@ dependencies {
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
 
-    androidTestCompile 'com.android.support.test:runner:0.4.1'
-    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
 }
