Renamed project to 'snet' Dropped j2objc support Refactoring and cleanup

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 apply plugin: 'com.android.application'
@@ -35,5 +35,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile project (':ts-http-android')
+    compile project (':snet-android')
 }
