--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,58 +1,22 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-    }
+plugins {
+    id 'java'
+    id 'maven'
+    id 'signing'
 }
-apply plugin: 'com.android.library'
-apply plugin: 'maven'
-apply plugin: 'signing'
 
-group = 'org.skynetsoftware'
-version = '3.0.0'
+group 'org.skynetsoftware'
+version '3.0.0'
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
-    jcenter()
     mavenCentral()
-    mavenLocal()
-    flatDir { dirs 'aars' }
-    maven { url 'http://maven.android-forever.com/' }
 }
 
-android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 25
-    }
-
-    packagingOptions {
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-}
-
-task sourcesJar(type: Jar) {
+task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -85,9 +49,9 @@ uploadArchives {
             }
 
             pom.project {
-                artifactId 'snet-android'
-                name 'snet-android'
-                packaging 'aar'
+                artifactId 'snet-java'
+                name 'snet-java'
+                packaging 'jar'
                 description 'HTTP wrapper'
                 url 'http://gitlab.pedjaapps.net/pedja/snet'
 
@@ -113,15 +77,4 @@ uploadArchives {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     archives "org.apache.maven.wagon:wagon-ssh:2.2"
-    compile 'org.skynetsoftware:supertoasts:2.0.4'
-
-    compile project (':snet-java')
-
-    // Required -- JUnit 4 framework
-    testCompile 'junit:junit:4.12'
-    // Optional -- Mockito framework
-    testCompile 'org.mockito:mockito-core:1.10.19'
-
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
 }
