mock android dependencies (fastest way right now, should make interfaces for log, asynctask, etc in core than implement in android using those classes)

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -77,4 +77,5 @@ uploadArchives {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     archives "org.apache.maven.wagon:wagon-ssh:2.2"
+    compileOnly project(':provided')
 }
