--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':example', 'snet-android', 'snet-java'
+include ':example', ':provided', 'snet-android', 'snet-java'
 project(':snet-android').projectDir = new File('android')
-project(':snet-java').projectDir = new File('java')
+project(':snet-java').projectDir = new File('core')
