--- a/example/build.gradle
+++ b/example/build.gradle
@@ -35,5 +35,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile project (':snet-android')
+    compile project (':android')
 }
