--- a/java/build.gradle
+++ b/java/build.gradle
@@ -7,12 +7,8 @@ plugins {
 group 'org.skynetsoftware'
 version '3.0.0'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
-
-repositories {
-    mavenCentral()
-}
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
@@ -49,8 +45,8 @@ uploadArchives {
             }
 
             pom.project {
-                artifactId 'snet-core'
-                name 'snet-core'
+                artifactId 'snet-java'
+                name 'snet-java'
                 packaging 'jar'
                 description 'HTTP wrapper'
                 url 'http://gitlab.pedjaapps.net/pedja/snet'
@@ -74,8 +70,9 @@ uploadArchives {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':core')
     archives "org.apache.maven.wagon:wagon-ssh:2.2"
-    compileOnly project(':provided')
 }
