--- a/core/build.gradle
+++ b/core/build.gradle
@@ -78,4 +78,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     archives "org.apache.maven.wagon:wagon-ssh:2.2"
     compileOnly project(':provided')
+    testCompile 'junit:junit:4.12'
 }
