--- a/java/build.gradle
+++ b/java/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'org.skynetsoftware'
-version '3.0.0'
+version '3.1.1'
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
@@ -30,7 +30,7 @@ artifacts {
 }
 
 signing {
-    required { has("release") && gradle.taskGraph.hasTask("uploadArchives") }
+    required { hasProperty("release") && gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
