--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,18 +1,12 @@
-plugins {
-    id 'java'
-    id 'maven'
-    id 'signing'
-}
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
+apply plugin: 'java'
 
 group 'org.skynetsoftware'
 version '3.1.4'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-
-repositories {
-    mavenCentral()
-}
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
@@ -28,55 +22,41 @@ javadoc {
     failOnError false
 }
 
-artifacts {
-    archives javadocJar
-    archives sourcesJar
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId group
+            artifactId 'snet-core'
+            version project.version
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
 }
 
-signing {
-    required { hasProperty("release") && gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            configuration = configurations.archives
-            repository(url: "scp://maven.android-forever.com/var/www/vhosts/pedjaapps.net/maven.android-forever.com") {
-                authentication(userName: androidforeverSshUsername, privateKey: androidforeverSshPrivateKey, passphrase: androidforeverSshPassphrase)
-            }
-
-            pom.project {
-                artifactId 'snet-core'
-                name 'snet-core'
-                packaging 'jar'
-                description 'HTTP wrapper'
-                url 'http://gitlab.pedjaapps.net/pedja/snet'
-
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution 'repo'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'pedja1'
-                        name 'Predrag Čokulov'
-                    }
-                }
-            }
+bintray {
+    override = true
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    publications = ['mavenJava']
+    pkg {
+        repo = 'maven'
+        name = 'org.skynetsoftware.snet-core'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/pedja1/snet.git'
+        version {
+            name = project.version
+            desc = 'Async http wrapper'
+            released  = new Date()
+            //vcsTag = '1.3.0'
+            //attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    archives "org.apache.maven.wagon:wagon-ssh:2.2"
     compileOnly project(':provided')
     testCompile 'junit:junit:4.12'
 }
